# cuboid_remap_jax

./: README.md  setup.cfg
cuboid_remap/: __init__.py  cuboid.py  remap.py  utils.py
notebooks/: tutorial.ipynb
