[metadata]
name = remap
version = 0.0.0
author = Matthew Ho
author_email = matthew.annam.ho@gmail.com
description = An implementation of cuboid remapping in Jax

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    jax
    numpy
    tqdm